--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 <p>TEST</p>
+<a href=#description_toolkit.html>Link to Description Toolkit</a>
 </body>
 </html>
