--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 <p>TEST</p>
-<a href=#description_toolkit.html>Link to Description Toolkit</a>
+<a href=https://psohmer.github.io/description_toolkit.html>Link to Description Toolkit</a>
 </body>
 </html>
