Added description toolkit links outline

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>PETER SOHMER</h1>
+<p>Subheader</p>
 <p>TEST</p>
 <a href=https://psohmer.github.io/description_toolkit.html>Link to Description Toolkit</a>
 </body>
