--- a/description_toolkit.html
+++ b/description_toolkit.html
@@ -1,9 +1,37 @@
+<!doctype html>
 <html>
 <header>
 <h1>Description Toolkit</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<p>Subheader</p>
 </header>
 <body>
-<p>TEST</p>
+<p>Resource Group 1</p>
+<ul>
+	<li><a href="LINK">TEXT</a></li>
+	<li><a href="LINK">TEXT</a></li>
+	<li><a href="LINK">TEXT</a></li>
+</ul>
+<p>Resource Group 2</p>
+<ul>
+	<li><a href="LINK">TEXT</a></li>
+	<li><a href="LINK">TEXT</a></li>
+	<li><a href="LINK">TEXT</a></li>
+</ul>
+<p>Resource Group 3</p>
+<ul>
+	<li><a href="LINK">TEXT</a></li>
+	<li><a href="LINK">TEXT</a></li>
+	<li><a href="LINK">TEXT</a></li>
+</ul>
+
+<h2>A Description List</h2>
+
+<dl>
+  <dt><a href="LINK">TEXT</a></dt>
+  <dd>- black hot drink</dd>
+  <dt><a href="LINK">TEXT</a></dt>
+  <dd>- white cold drink</dd>
+</dl>
+
 </body>
 </html>
