--- a/link1.html
+++ b/link1.html
@@ -1,39 +1,14 @@
 ---
-layout: default
+layout: post
+title: Test Post 1
+tags: [tag1, tag2, tag3]
 ---
 <html>
-<header>
-<h1>Description Toolkit</h1>
-<p>Subheader</p>
+<h1><a href="https://escholarship.org/uc/item/9cg222jc"><i>UC Guidelines for Born-Digital Archival Description</i></a></h1>
 </header>
 <body>
-<p>Resource Group 1</p>
-<ul>
-	<li><a href="LINK">TEXT</a></li>
-	<li><a href="LINK">TEXT</a></li>
-	<li><a href="LINK">TEXT</a></li>
-</ul>
-<p>Resource Group 2</p>
-<ul>
-	<li><a href="LINK">TEXT</a></li>
-	<li><a href="LINK">TEXT</a></li>
-	<li><a href="LINK">TEXT</a></li>
-</ul>
-<p>Resource Group 3</p>
-<ul>
-	<li><a href="LINK">TEXT</a></li>
-	<li><a href="LINK">TEXT</a></li>
-	<li><a href="LINK">TEXT</a></li>
-</ul>
-
-<h2>A Description List</h2>
-
-<dl>
-  <dt><a href="LINK">TEXT</a></dt>
-  <dd>- black hot drink</dd>
-  <dt><a href="LINK">TEXT</a></dt>
-  <dd>- white cold drink</dd>
-</dl>
+Useful, practical guidelines for how to apply DACS-compliant archival description to born-digital records. Referenced widely. The guidelines do not provide on what direction on processing levels to apply to born-digital material, but do offer elaboration and examples of specific cases. <a href="https://github.com/uc-borndigital-ckg/uc-guidelines">Version 1.0 available on Github.</a><
+<dd><b>Tags:</b> Born-Digital Description; Documentation</dd>
 
 </body>
 </html>
